--- a/fonts/index.html
+++ b/fonts/index.html
@@ -3,8 +3,8 @@
 	<head>
 	   <meta charset="utf-8">
 	   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	   <title>Landing</title>
-       <meta name="description" content="Free HTML5 Website Template" />
+	   <title>Funny Fonts</title>
+       <meta name="description" content="Cool Font Symbol and Emoticon" />
 	   <meta name="viewport" content="width=device-width, initial-scale=1">
 	   <!-- Animate.css -->
 	   <link rel="stylesheet" href="css/animate.css">
@@ -25,10 +25,11 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
-					<h1 id="fh5co-logo"><a href="index.html">Landing</a></h1>
-					<h2>A free website templates for landing pages. Made with love by</h2>
+					<h1 id="fh5co-logo"><a href="index.html">Funny Fonts</a></h1>
+					<h2>Font and Symbol. Cool Font Symbol and Emoticon.</h2>
 					<p>
-						<a href="#" class="btn btn-primary">Download on AppStore</a>
+						<a href="itms-apps://itunes.apple.com/app/id734250365" class="btn btn-primary">Download on AppStore</a>
+                        <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via Email</a>
 					</p>
 				</div>
 			</div>
@@ -46,8 +47,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Keep It Simple</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h2>Fonts</h2>
+							<p>OVER 90 different fonts that can be used everywhere you can type a message.</p>
 						</div>
 					</div>
 				</div>
@@ -63,8 +64,8 @@
 				<div class="col-md-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Pixel Perfect</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h2>Symbols</h2>
+							<p>OVER 30 decoration texts, Send cute text messages to your friends.</p>
 						</div>
 					</div>
 				</div>
@@ -80,8 +81,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Beautiful Design</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<h2>Share</h2>
+							<p>Download and customize your iPhone with Funny Fonts now!</p>
 						</div>
 					</div>
 				</div>
@@ -103,21 +104,21 @@
 					<div class="item">
 						<div class="testimony-slide active text-center">
 							<blockquote>
-								<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;There are a lot of beautiful fonts, I like it very much.&rdquo;</p>
 							</blockquote>
 						</div>
 					</div>
 					<div class="item">
 						<div class="testimony-slide active text-center">
 							<blockquote>
-								<p>&ldquo;Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;Very convenient to use, very good, worth recommending.&rdquo;</p>
 							</blockquote>
 						</div>
 					</div>
 					<div class="item">
 						<div class="testimony-slide active text-center">
 							<blockquote>
-								<p>&ldquo;Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+								<p>&ldquo;Emoji is very easy to use and can be sent to social platforms for sharing with friends.&rdquo;</p>
 							</blockquote>
 						</div>
 					</div>
@@ -128,12 +129,12 @@
 			<div class="container">
 				<div class="row text-center fh5co-heading">
 					<div class="col-md-8 col-md-offset-2">
-						<h2>Subscribe</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h2>Contact US</h2>
+						<p>Welcome to give us feedback.</p>
 					</div>
 				</div>
 				<div class="get-started">
-					<form class="form-inline">
+					<form class="form-inline" action="mailto:idreamapp@163.com">
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="name" class="sr-only">Name</label>
@@ -147,7 +148,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">Subscribe</button>
+							<button type="submit" class="btn btn-default btn-block">Send</button>
 						</div>
 					</form>
 				</div>
@@ -157,7 +158,7 @@
 			<div class="container">
 				<div class="col-md-12 text-center">
 					<p class="copyright">
-						<small>&copy; 2019. Free HTML5 Template. All Rights Reserved.</small>
+						<small>&copy; 2019. iDreamApp. All Rights Reserved.</small>
                     </p>
 				</div>
 			</div>
