--- a/fonts/support.html
+++ b/fonts/support.html
@@ -29,7 +29,7 @@
 					<h2>Font and Symbol. Cool Font Symbol and Emoticon.</h2>
 					<p>
 						<a href="itms-apps://itunes.apple.com/app/id734250365" class="btn btn-primary">Download on AppStore</a>
-                        <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via Email</a>
+                        <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via E-mail</a>
 					</p>
 				</div>
 			</div>
