--- a/fonts/support.html
+++ b/fonts/support.html
@@ -134,7 +134,7 @@
 					</div>
 				</div>
 				<div class="get-started">
-					<form class="form-inline" action="mailto:idreamapp@163.com">
+					<form class="form-inline">
 						<div class="col-md-4 col-sm-4">
 							<div class="form-group">
 								<label for="name" class="sr-only">Name</label>
@@ -148,7 +148,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
-							<button type="submit" class="btn btn-default btn-block">Send</button>
+							<a href="mailto:idreamapp@163.com" class="btn btn-default btn-block">Send</a>
 						</div>
 					</form>
 				</div>
