--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <body>
         <h1>Welcome</h1>
         <h2>This is index page!</h2>
+        <h2>Welcome to visit our website.</h2>
+        <h2>We focus on developing great apps.</h2>
+        <h2>iDream App</h2>
     </body>
 </html>
