--- a/birthday/support.html
+++ b/birthday/support.html
@@ -3,7 +3,7 @@
 	<head>
 	   <meta charset="utf-8">
 	   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	   <title>Birthday Reminder</title>
+	   <title>Support</title>
        <meta name="description" content="Birthday Reminder Countdown" />
 	   <meta name="viewport" content="width=device-width, initial-scale=1">
 	   <!-- Animate.css -->
