--- a/fonts/index.html
+++ b/fonts/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Support</title>
+        <title>Index</title>
         <meta name="description" content="Support">
         <link rel="stylesheet" href="main.css">
     </head>
