--- a/sticker/support.html
+++ b/sticker/support.html
@@ -3,7 +3,7 @@
 	<head>
 	   <meta charset="utf-8">
 	   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	   <title>表情斗图神器</title>
+	   <title>Support</title>
        <meta name="description" content="GIF表情包大全for微信QQ" />
 	   <meta name="viewport" content="width=device-width, initial-scale=1">
 	   <!-- Animate.css -->
