--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>Welcome</h1>
+        <h1>Index</h1>
         <h2>This is index page!</h2>
         <h2>Welcome to visit our website.</h2>
         <h2>We focus on developing great apps.</h2>
