--- a/joke/support.html
+++ b/joke/support.html
@@ -81,8 +81,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>内涵趣图</h2>
-							<p>最奇葩的GIF囧图</p>
+							<h2>更多功能</h2>
+							<p>贴心的使用体验</p>
 						</div>
 					</div>
 				</div>
