--- a/manga/index.html
+++ b/manga/index.html
@@ -11,8 +11,8 @@
         <h1>Manga Reader</h1>
         <h2>Contact us E-mail:idreamapp@163.com</h2>
         <br/>
-        <h3>Biggest Library</h3>
-        <h3>Easy discovery</h3>
-        <h3>Update daily</h3>
+        <h3>Document management</h3>
+        <h3>Add comics</h3>
+        <h3>User Friendly</h3>
     </body>
 </html>
