--- a/manga/support.html
+++ b/manga/support.html
@@ -26,7 +26,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
 					<h1 id="fh5co-logo">Manga Reader</h1>
-					<h2>Manga Comic Reading App</h2>
+					<h2>Reading App for CBR and CBZ</h2>
 					<p>
 						<a href="itms-apps://itunes.apple.com/app/id1515441197" class="btn btn-primary">Download on AppStore</a>
                         <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via E-mail</a>
@@ -47,8 +47,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Popular</h2>
-							<p>Thousands of manga</p>
+							<h2>File formats</h2>
+							<p>Support cbr and cbz</p>
 						</div>
 					</div>
 				</div>
@@ -64,8 +64,8 @@
 				<div class="col-md-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Directory</h2>
-							<p>multiple genre</p>
+							<h2>Add comics</h2>
+							<p>Multiple ways to add comic files</p>
 						</div>
 					</div>
 				</div>
@@ -81,8 +81,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Download</h2>
-							<p>Reading offline</p>
+							<h2>User Friendly</h2>
+							<p>Easy to to use</p>
 						</div>
 					</div>
 				</div>
@@ -104,7 +104,7 @@
 					<div class="item">
 						<div class="testimony-slide active text-center">
 							<blockquote>
-								<p>&ldquo;There is a lot of content, I can always find what I like.&rdquo;</p>
+								<p>&ldquo;Very good, I like it very much.&rdquo;</p>
 							</blockquote>
 						</div>
 					</div>
