--- a/manga/support.html
+++ b/manga/support.html
@@ -26,7 +26,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
 					<h1 id="fh5co-logo">Manga Reader</h1>
-					<h2>Reading App for CBR and CBZ</h2>
+					<h2>Manga Comic Reading App</h2>
 					<p>
 						<a href="itms-apps://itunes.apple.com/app/id1515441197" class="btn btn-primary">Download on AppStore</a>
                         <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via E-mail</a>
