--- a/manga/support.html
+++ b/manga/support.html
@@ -48,7 +48,7 @@
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
 							<h2>File formats</h2>
-							<p>Support cbr and cbz</p>
+							<p>Support cbz</p>
 						</div>
 					</div>
 				</div>
