--- a/period/support.html
+++ b/period/support.html
@@ -26,7 +26,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
 					<h1 id="fh5co-logo">Period Tracker</h1>
-					<h2>Cycle, Ovulation and Pregnancy</h2>
+					<h2>Menstrual Ovulation Calendar</h2>
 					<p>
 						<a href="itms-apps://itunes.apple.com/app/id6474762886" class="btn btn-primary">Download on AppStore</a>
                         <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via E-mail</a>
