--- a/screen/support.html
+++ b/screen/support.html
@@ -26,7 +26,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
 					<h1 id="fh5co-logo">Screen Lock</h1>
-					<h2>Hide Block Apps</h2>
+					<h2>Focus, block apps, save time</h2>
 					<p>
 						<a href="itms-apps://itunes.apple.com/app/id6456942073" class="btn btn-primary">Download on AppStore</a>
                         <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via E-mail</a>
@@ -47,7 +47,7 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>Group</h2>
+							<h2>Apps</h2>
 							<p>Block apps you choose</p>
 						</div>
 					</div>
