--- a/screen/index.html
+++ b/screen/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>Screen Lock</h1>
+        <h1>App Lock</h1>
         <h2>Contact us E-mail:idreamapp@163.com</h2>
         <br/>
         <h3>Block apps you choose</h3>
