--- a/screen/support.html
+++ b/screen/support.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
-					<h1 id="fh5co-logo">Screen Lock</h1>
+					<h1 id="fh5co-logo">App Lock</h1>
 					<h2>Focus, block apps, save time</h2>
 					<p>
 						<a href="itms-apps://itunes.apple.com/app/id6456942073" class="btn btn-primary">Download on AppStore</a>
