--- a/ydq/support.html
+++ b/ydq/support.html
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="col-md-6 col-sm-6">
 				<div class="intro">
-					<h1 id="fh5co-logo">阅读器大全</h1>
-					<h2>更简洁的阅读器</h2>
+					<h1 id="fh5co-logo">Text Explorer</h1>
+					<h2>Open Text File</h2>
 					<p>
 						<a href="itms-apps://itunes.apple.com/app/id1533668719" class="btn btn-primary">Download on AppStore</a>
                         <a href="mailto:idreamapp@163.com" class="btn btn-success">Contact US via E-mail</a>
@@ -47,8 +47,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>文件格式</h2>
-							<p>支持EPUB文件格式</p>
+							<h2>File Format</h2>
+							<p>Supports common file formats</p>
 						</div>
 					</div>
 				</div>
@@ -64,8 +64,8 @@
 				<div class="col-md-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>文件管理</h2>
-							<p>高效的文档管理</p>
+							<h2>Import File</h2>
+							<p>Multiple ways to add files</p>
 						</div>
 					</div>
 				</div>
@@ -81,8 +81,8 @@
 				<div class="col-md-6 col-md-push-6">
 					<div class="fh5co-copy">
 						<div class="fh5co-copy-inner">
-							<h2>添加文件</h2>
-							<p>支持多种导入方式</p>
+							<h2>Manage File</h2>
+							<p>Easy management</p>
 						</div>
 					</div>
 				</div>
@@ -104,21 +104,21 @@
 					<div class="item">
 						<div class="testimony-slide active text-center">
 							<blockquote>
-								<p>&ldquo;挺好的, 我非常喜欢.&rdquo;</p>
+								<p>&ldquo;Very good, I like it very much.&rdquo;</p>
 							</blockquote>
 						</div>
 					</div>
 					<div class="item">
 						<div class="testimony-slide active text-center">
 							<blockquote>
-								<p>&ldquo;界面简单容易使用并且功能很强大.&rdquo;</p>
+								<p>&ldquo;The interface is simple, easy to use and very powerful.&rdquo;</p>
 							</blockquote>
 						</div>
 					</div>
 					<div class="item">
 						<div class="testimony-slide active text-center">
 							<blockquote>
-								<p>&ldquo;正在用, 推荐给大家使用.&rdquo;</p>
+								<p>&ldquo;It is being used, and it is recommended for everyone to use.&rdquo;</p>
 							</blockquote>
 						</div>
 					</div>
