--- a/ydq/index.html
+++ b/ydq/index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>阅读器大全</h1>
+        <h1>Text Explorer</h1>
         <h2>Contact us E-mail:idreamapp@163.com</h2>
         <br/>
-        <h3>支持EPUB文件格式</h3>
-        <h3>高效的文档管理</h3>
-        <h3>多种导入方式</h3>
+        <h3>Supports common file formats</h3>
+        <h3>Multiple ways to add files</h3>
+        <h3>Easy management</h3>
     </body>
 </html>
